# ECSteroid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Constants.h  main.cpp
src/application/: Application.cpp  Application.h  ECSteroidApplication.cpp  ECSteroidApplication.h  IWindow.h  SFMLImGuiWindow.cpp  SFMLImGuiWindow.h  SFMLWindow.cpp  SFMLWindow.h
src/components/: Asteroid.h  Boid.h  Button.h  ButtonObject.h  CircleShape.h  Health.h  Killer.h  LocalPlayer.h  LocalPosition.h  LocalRotation.h  MuzzleFlash.h  PhysicsBody.h  PhysicsDefinition.h  Position.h  Relation.h  Rotation.h  SFMLCircleShape.h  SFMLDrawable.h  SFMLRectShape.h  SFMLRectangleShape.h  SFMLSprite.h  SFMLText.h  SFMLTransformable.h  SFMLViewTarget.h  Score.h  ShootAbility.h  Speed.h  Sprite.h  SpriteDefinition.h  WorldPosition.h  WrapAround.h
src/components/bullet/: BulletDamage.h  BulletDestroyOnCollision.h  BulletLifetime.h  BulletOwner.h
src/components/debug/: Box2DDebug.h  DebugAngle.h  DebugName.h  SFMLButtonDebug.h
src/components/tween/: TweenData.h  TweenEase.h  TweenLocalPosition.h  TweenLoop.h  TweenOpacity.h  TweenScale.h  TweenTarget.h  TweenTimer.h  TweenWorldPosition.h
src/datatype/: CollisionGroup.h  CreateAsteroidParameter.h  Ease.h  TweenBuilder.cpp  TweenBuilder.h  TweenLoopType.h  Vector2.h
src/events/: CollisionEvent.h  EntityDeathEvent.h  SFMLEvent.h  ShootEvent.h  StartWaveEvent.h  TestEvent.h
src/scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  SceneHandler.cpp  SceneHandler.h  TestScene.cpp  TestScene.h  TweenTestingScene.cpp  TweenTestingScene.h
src/services/: SFMLAudioService.cpp  SFMLAudioService.h  SFMLFontService.cpp  SFMLFontService.h  SFMLTextureService.cpp  SFMLTextureService.h
src/services/core/: ILoadableService.h  ILocatableService.h  IUpdatableService.h  ServiceLocator.h  ServicesHandler.cpp  ServicesHandler.h
src/systems/: AsteroidScoreSystem.cpp  AsteroidScoreSystem.h  AsteroidSpawnerSystem.cpp  AsteroidSpawnerSystem.h  AsteroidToPlayerCollisionSystem.cpp  AsteroidToPlayerCollisionSystem.h  BoidSystem.cpp  BoidSystem.h  Box2DDebugDrawSystem.cpp  Box2DDebugDrawSystem.h  Box2DPhysicsContactHandler.cpp  Box2DPhysicsContactHandler.h  Box2DPhysicsSystem.cpp  Box2DPhysicsSystem.h  BulletCollisionSystem.cpp  BulletCollisionSystem.h  BulletLifetimeSystem.cpp  BulletLifetimeSystem.h  DebugAngleSystem.h  DestroyOnZeroHealthSystem.cpp  DestroyOnZeroHealthSystem.h  EntityRelationSystem.cpp  EntityRelationSystem.h  GameBGMSystem.cpp  GameBGMSystem.h  IFixedUpdatableSystem.h  ILoadableSystem.h  IRenderableSystem.h  IUpdatableSystem.h  LocalPlayerMovementSystem.cpp  LocalPlayerMovementSystem.h  MainMenuBGMSystem.cpp  MainMenuBGMSystem.h  PlayerShootSFXSystem.cpp  PlayerShootSFXSystem.h  PlayerShootSystem.cpp  PlayerShootSystem.h  RectangleDrawSystem.cpp  RectangleDrawSystem.h  SFMLRenderSystem.cpp  (+13 more)
src/ui/: Button.cpp  Button.h
src/util/: Random.cpp  Random.h  Time.cpp  Time.h  Tweens.cpp  Tweens.h
(+51 files in other folders)
